<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/selectByMap"
            android:icon="@drawable/ic_action_map"
            android:title="@string/select_position_by_map" />
        <item
            android:id="@+id/selectCity"
            android:icon="@drawable/ic_action_select_city"
            android:title="@string/select_city" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_action_exit"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
